# LuminNexus-AlchemyMind-Shared

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: validate-conversion.md
docs/: 20251117_refactoring_plan.md  test_flow_diagram.md  testing_with_real_data.md  validation_report_20251117.md
specs/: html_attribute_sanitization_proposal.md
src/luminnexus_alchemy_shared/: __init__.py  claude_usage.py
src/luminnexus_alchemy_shared/converters/: __init__.py  type_converters.py
src/luminnexus_alchemy_shared/html/: __init__.py  markdown_converter.py  table_renderer.py
tests/: __init__.py  generate_test_outputs.py  llm_validation_agent.py  test_html_sanitization.py  test_html_sanitization_bug2.py  test_markdown_converter.py  test_real_world_conversions.py  test_type_converters.py
tests/fixtures/: iherb_sample_data.py
